--- a/package.json
+++ b/package.json
@@ -12,8 +12,21 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
     "@pinia/nuxt": "^0.5.4",
+    "chart.js": "^4.4.4",
+    "@tiptap/extension-code": "^2.6.6",
+    "@tiptap/extension-color": "^2.6.6",
+    "@tiptap/extension-heading": "^2.6.6",
+    "@tiptap/extension-highlight": "^2.6.6",
+    "@tiptap/extension-image": "^2.6.6",
+    "@tiptap/extension-list-item": "^2.6.6",
+    "@tiptap/extension-text-align": "^2.6.6",
+    "@tiptap/extension-text-style": "^2.6.6",
+    "@tiptap/extension-underline": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
+    "@tiptap/vue-3": "^2.6.6",
     "nuxt": "^3.13.0",
     "vue": "latest",
+    "vue-chartjs": "^5.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
