--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
     "@pinia/nuxt": "^0.5.4",
-    "chart.js": "^4.4.4",
     "@tiptap/extension-code": "^2.6.6",
     "@tiptap/extension-color": "^2.6.6",
     "@tiptap/extension-heading": "^2.6.6",
@@ -24,7 +23,10 @@
     "@tiptap/extension-underline": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
     "@tiptap/vue-3": "^2.6.6",
+    "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.13.0",
+    "v-calendar": "^3.1.2",
     "vue": "latest",
     "vue-chartjs": "^5.3.1",
     "zod": "^3.23.8"
