--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "supabase:generate": "supabase gen types --lang=typescript --project-id omfhkajlvchmutqikdag --schema public > ./types/database.types.ts"
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.4",
     "@pinia/nuxt": "^0.5.4",
+    "@supabase/supabase-js": "^2.45.4",
     "@tiptap/extension-code": "^2.6.6",
     "@tiptap/extension-color": "^2.6.6",
     "@tiptap/extension-heading": "^2.6.6",
